Closed
Bug 1514360
Opened 6 years ago
Closed 6 years ago
dom/tests/mochitest/bugs/test_navigator_buildID.html | uncaught exception - TypeError: chromeScript.sendSyncMessage(...)[0] is undefined; can't access element at index 0 at @http://mochi.test:8888/tests/dom/tests/mo ...
Categories
(GeckoView :: General, defect, P5)
GeckoView
General
Tracking
(geckoview64 wontfix, firefox64 wontfix, firefox65 wontfix, firefox66 fixed)
RESOLVED
FIXED
mozilla66
People
(Reporter: intermittent-bug-filer, Assigned: snorp)
References
Details
Attachments
(2 files)
Assignee | ||
Comment 1•6 years ago
|
||
We currently don't use 'navigator:browser' for GeckoView windows because
we need an easy way to disambiguate from Fennec windows. Instead, we use
'navigator:geckoview' for those windows. This adds a method that falls
back to that automatically, useful in cases where you want it to work on
both Desktop/Fennec and GeckoView.
Assignee | ||
Comment 2•6 years ago
|
||
Depends on D14613
Assignee | ||
Updated•6 years ago
|
Assignee: nobody → snorp
Comment hidden (Intermittent Failures Robot) |
Pushed by jwillcox@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9acd6f4f8148
Add nsIWindowMediator.getMostRecentBrowserWindow() r=Ehsan
https://hg.mozilla.org/integration/autoland/rev/edf1f05e9d00
Fix test_navigator_buildID.html under GeckoView r=Ehsan
Comment 5•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/9acd6f4f8148
https://hg.mozilla.org/mozilla-central/rev/edf1f05e9d00
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox66:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 66
Comment 6•6 years ago
|
||
bugherder |
Updated•6 years ago
|
Product: Firefox for Android → GeckoView
Updated•6 years ago
|
Target Milestone: Firefox 66 → mozilla66
Comment 7•6 years ago
|
||
65=wontfix because we don't need to uplift this new API if it's not used in 65.
You need to log in
before you can comment on or make changes to this bug.
Description
•