Bug 1514360 - Add nsIWindowMediator.getMostRecentBrowserWindow() r=Ehsan

We currently don't use 'navigator:browser' for GeckoView windows because
we need an easy way to disambiguate from Fennec windows. Instead, we use
'navigator:geckoview' for those windows. This adds a method that falls
back to that automatically, useful in cases where you want it to work on
both Desktop/Fennec and GeckoView.

Differential Revision: https://phabricator.services.mozilla.com/D14613